tester/src/test/aya/failure/syntax/issue166.aya.txt
In file $FILE:1:0 ->

  1 | \fuck
      ^^
  
Error: Parser error: mismatched input '\' expecting {<EOF>, 'def', 'struct', 'prim', 'data', 'module', 'open', 'import', 'public', 'private'}
Parsing interrupted due to error(s).
What are you doing?
